--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="take_photo">Zrób zdjęcie</string>
     <string name="draw">Rysuj</string>
     <string name="send">Wyślij</string>
+    <string name="title_activity_drawing">Drawing</string>
 
 </resources>
